<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Dashboard">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_home" />
<!--                <item-->
<!--                    android:id="@+id/nav_slideshow"-->
<!--                    android:icon="@drawable/ic_menu_slideshow"-->
<!--                    android:title="Shop" />-->
                <item
                    android:id="@+id/nav_shop"
                    android:icon="@drawable/ic_baseline_shopping_cart_24"
                    android:title="Shop" />
                <item
                    android:id="@+id/nav_profil"
                    android:icon="@drawable/ic_outline_account_box_24"
                    android:title="Profil" />
<!--                <item-->
<!--                    android:id="@+id/nav_gallery"-->
<!--                    android:icon="@drawable/ic_menu_gallery"-->
<!--                    android:title="@string/menu_gallery" />-->
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="Account Settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="Settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_power_settings_new_24"
                    android:title="Log Out" />
            </menu>
        </item>
    </group>
</menu>